update: LinkedIn label

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </a>
     <div class="wrapper">
         <header>
-            <h1 class="title">Maplemap's portfolio</h1>
+            <h1 class="title">Maplemap's projects</h1>
         </header>
         <main>
             <div class="description">
@@ -56,7 +56,7 @@
                     over time and give others the opportunity to evaluate my code, as it closely resembles the code I write in
                     production.
                 </p>
-                <p>My full list of skills is available <a href="https://www.linkedin.com/in/maplemap/">by link</a>.</p>
+                <p>My full list of skills is available <a href="https://www.linkedin.com/in/maplemap/">on LinkedIn</a>.</p>
             </div>
             <div class="technologies">
                 Technologies filter:
@@ -66,7 +66,7 @@
             </div>
         </main>
         <footer>
-            <span class="copyright"></span>
+            Serhii Illarionov <span class="copyright"></span>
         </footer>
     </div>
     <script src="script.js"></script>
